# SerraIntelligente

./: CMakeLists.txt  README.md  main.cpp
include/: Impianto.h  ImpiantoAlpino.h  ImpiantoCarnivoro.h  ImpiantoDesertico.h  ImpiantoMediterraneo.h  ImpiantoTropicale.h  Orario.h  Serra.h
src/: Impianto.cpp  ImpiantoAlpino.cpp  ImpiantoCarnivoro.cpp  ImpiantoDesertico.cpp  ImpiantoMediterraneo.cpp  ImpiantoTropicale.cpp  Orario.cpp  Serra.cpp
